--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=@activatedProperties@
+
 spring.application.name=cardapio
 server.servlet.context-path=/cardapio/api
 server.port=8083
