--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -6,6 +6,7 @@ spring.data.mongodb.database=appetito
 #URLS MICROSERVICES
 microservice.autenticacao.url=http://autenticacao-ms:8081/autenticacao/api/
 microservice.carrinho.url=http://carrinho-ms:8084/carrinho/api/
+microservice.localizacao.url=http://localizacao-ms:8086/localizacao/api/
 
 #URL DOWNLOAD IMAGENS
 download.imagens.url=http://appetito.brazilsouth.cloudapp.azure.com:8083/cardapio/api/v1/produtos/%s/imagem/download
